--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   timezone: ^0.9.4
   uuid: ^4.0.0  # for generating unique IDs
   shared_preferences: ^2.5.3
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.4
